--- a/views/atividades/index.html
+++ b/views/atividades/index.html
@@ -1,11 +1,42 @@
 {{extend 'layout.html'}}
 
 {{if ativ:}}
-	{{=ativ}}
+    <table class="tabela">
+        <thead>
+            <tr>
+                <th>Atividade</th>
+                <th>Tipo</th>
+                <th>Nível</th>
+                <th>Duração</th>
+                <th>Apresentação</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        {{ for atividade in ativ: }}
+            <tr>
+                <td>{{=atividade.titulo}}</td>
+                <td>{{=atividade.tipo.tipo}}</td>
+                <td>{{=atividade.nivel[0]}}</td>
+                <td>{{=atividade.duracao.duracao}} hora(s)</td>
+                {{ if atividade.arquivo: }}
+                    <td>
+                        <a href="{{=URL('default','download',args=[atividade.arquivo])}}">Material da Apresentação</a>
+                    </td>
+                {{ else: }}
+                    <td>Sem Apresentação</td>
+                {{pass}}
+                <td>{{=atividade.status}}</td>
+            </tr>
+        {{ pass }}
+    </table>
+    <center><a href="{{=URL('atividades','nova')}}"><h4>Nova Atividade</h4></a></center>
 {{else:}}
-	{{if session.auth.user.id != id_user:}}
-		<center><h2>{{=T('usuario_ativ_invalido')}}</h2></center>
-	{{else:}}
-		<center><h2>Você não tem atividades cadastradas!</h2></center>
-	{{pass}}
+    {{if session.auth.user.id != id_user:}}
+        <center><h2>{{=T('usuario_ativ_invalido')}}</h2></center>
+    {{else:}}
+        <center>
+            <h2>Você não tem atividades cadastradas!</h2><br />
+            <a href="{{=URL('atividades','nova')}}"><h3>Criar uma Nova Atividade</h3></a>
+        </center>
+    {{pass}}
 {{pass}}
