--- a/views/atividades/nova.html
+++ b/views/atividades/nova.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-
-
-{{=form}}
-
+<center>
+    {{=form}}<br />
+    <a href="{{=URL('atividades','index')}}"><h3>Voltar</h3></a>
+</center>
