--- a/views/layout.html
+++ b/views/layout.html
@@ -38,6 +38,7 @@
     
     {{#------  require CSS and JS files for this page (read info in base.css) ------}}
     {{response.files.append(URL('static','css/base.css'))}}
+    {{response.files.append(URL('static','css/tabelas.css'))}}
     {{response.files.append(URL('static','css/superfish.css'))}}
     {{response.files.append(URL('static','js/superfish.js'))}}
     {{#------ include web2py specific js code (jquery, calendar, form stuff) ------}}
