Inserindo um título no cadastro e centralizando-o.

--- a/views/atividades/index.html
+++ b/views/atividades/index.html
@@ -1,6 +1,8 @@
 {{extend 'layout.html'}}
-
 {{if ativ:}}
+    <center>    
+        <h2>Suas Atividades Cadastradas</h2>
+    </center>
     <table class="tabela">
         <thead>
             <tr>
