--- a/views/atividades/minicurriculo.html
+++ b/views/atividades/minicurriculo.html
@@ -1,4 +1,4 @@
 {{extend 'layout.html'}}
 
-<center><h2>Bem vindo, {{=session.auth.user.first_name}}</h2></center>
+<center><h2>Seu Mini-currículo</h2></center>
 <center>{{=form}}</center>
