Criado um título para o formulário, como também inserido uma div para estilizá-lo a partir do CSS formulário.css

--- a/views/atividades/nova.html
+++ b/views/atividades/nova.html
@@ -1,5 +1,10 @@
 {{extend 'layout.html'}}
 <center>
+    <h2>Nova Atividade</h2>
+    <br />
+</center>    
+<div id="formularios">    
+
     {{=form}}<br />
-    <a href="{{=URL('atividades','index')}}"><h3>Voltar</h3></a>
-</center>
+</div>
+    <center><a href="{{=URL('atividades','index')}}"><h3>Voltar</h3></a></center>
