--- a/views/layout.html
+++ b/views/layout.html
@@ -39,6 +39,7 @@
     {{#------  require CSS and JS files for this page (read info in base.css) ------}}
     {{response.files.append(URL('static','css/base.css'))}}
     {{response.files.append(URL('static','css/tabelas.css'))}}
+    {{response.files.append(URL('static','css/formularios.css'))}}    
     {{response.files.append(URL('static','css/superfish.css'))}}
     {{response.files.append(URL('static','js/superfish.js'))}}
     {{#------ include web2py specific js code (jquery, calendar, form stuff) ------}}
