Inserido os créditos do desenvolvimento .

--- a/views/layout.html
+++ b/views/layout.html
@@ -152,6 +152,8 @@
 	    <center>
 	      <a href="http://www.web2py.com/"><img src="{{=URL('static','images/poweredby.png')}}"  style="padding-bottom: 3px;"/></a>
 	      <br />	      
+	      <span><h5>Desenvolvidor por <a href="http://algoritmizando.com">Bruno Barbosa</a> e 
+	      <a href="http://gilsondev.com">Gilson Filho</a></h5></span>
 	      <span>{{=T('Copyleft')}} - 2011</span>
 	    </center>
 	  <div style="clear: both;"></div><!-- Clear the divs -->
