--- a/views/layout.html
+++ b/views/layout.html
@@ -41,6 +41,9 @@
     {{response.files.append(URL('static','css/tabelas.css'))}}
     {{response.files.append(URL('static','css/formularios.css'))}}    
     {{response.files.append(URL('static','css/superfish.css'))}}
+    {{response.files.append(URL('static','fancybox/jquery.fancybox-1.3.1.css'))}}
+    {{response.files.append(URL('static','fancybox/jquery.mousewheel-3.0.2.pack.js'))}}
+    {{response.files.append(URL('static','fancybox/jquery.fancybox-1.3.1.js'))}}
     {{response.files.append(URL('static','js/superfish.js'))}}
     {{#------ include web2py specific js code (jquery, calendar, form stuff) ------}}
     {{include 'web2py_ajax.html'}}
