--- a/views/layout.html
+++ b/views/layout.html
@@ -155,8 +155,7 @@
 	    <center>
 	      <a href="http://www.web2py.com/"><img src="{{=URL('static','images/poweredby.png')}}"  style="padding-bottom: 3px;"/></a>
 	      <br />	      
-	      <span><h5>Desenvolvidor por <a href="http://algoritmizando.com">Bruno Barbosa</a> e 
-	      <a href="http://gilsondev.com">Gilson Filho</a></h5></span>
+	      <span><h5>Desenvolvidor pela <a href="http://flisoldf.blog.br/2011/?page_id=23">equipe do Flisol DF</a></h5></span>
 	      <span>{{=T('Copyleft')}} - 2011</span>
 	    </center>
 	  <div style="clear: both;"></div><!-- Clear the divs -->
