Incluído uma breve descrição do que é o tipo de atividade

--- a/views/tipoatividade/nova.html
+++ b/views/tipoatividade/nova.html
@@ -2,9 +2,14 @@
 
 <center>
     <h2>Novo Tipo de Atividade</h2>
+	<br />
+	<p>Insira os tipos de atividades disponíveis para o palestrante.</p>
+	<p>Ex: Palestras, Mini-Cursos...</p>
 </center>
 
-{{=form}}
+<center>
+	{{=form}}
+</center>
 <br />
 <center>
 
