Alterado os nomes de locais para salas e adicionado informações sobre do que se trata o menu

--- a/views/locais/lista.html
+++ b/views/locais/lista.html
@@ -2,12 +2,12 @@
 
 {{ if salas: }}
     <center>
-        <h2>Lista de Locais Cadastrados</h2>
+        <h2>Lista de Salas Cadastradas</h2>
     </center>
     <table class="tabela">
         <thead>
             <tr>
-                <th>Nome do Local</th>
+                <th>Nome da Sala</th>
                 <th>Quantidade de Lugares</th>
             </tr>
         </thead>
@@ -26,4 +26,4 @@
     </center>
 {{ pass }}
 <br />
-<center><h3><a href="{{=URL('locais','nova')}}">Novo Local</a></h3></center>
+<center><h3><a href="{{=URL('locais','nova')}}">Nova Sala</a></h3></center>
