alterado a nomeclatura de locais para salas

--- a/views/locais/nova.html
+++ b/views/locais/nova.html
@@ -1,10 +1,15 @@
 {{ extend 'layout.html' }}
 
 <center>
-    <h2>Novo Local</h2>
+    <h2>Nova Sala</h2>
+	<p>Insira o nome dos locais onde serão realizadas as atividades.</p>
+	<p>Ex: Laboratório 1, Auditório, Python...</p>
 </center>
 
-{{=form}}
+<center>
+	{{=form}}
+</center>
+
 <br />
 <center>
 
