--- a/static/css/superfish.css
+++ b/static/css/superfish.css
@@ -1,4 +1,4 @@
-
+    
 /*** ESSENTIAL STYLES ***/
 .sf-menu, .sf-menu * {
 	margin:			0;
@@ -72,7 +72,7 @@ ul.sf-menu li li li.sfHover ul {
 	background: #f48042;/*#BDD2FF;*/
 }
 .sf-menu li li {
-	background:		#AABDE6;
+	background:		#F48042;
 }
 .sf-menu li li a {
 	/*color: #13a;*/
