Adicionado uma variavel para gerar a tabela do plugin power Table

--- a/views/admin/dashboard.html
+++ b/views/admin/dashboard.html
@@ -11,93 +11,7 @@
       'type': 'iframe'
     });
   });
-</script>
+</script>   
+{{=atividades}}
 
-{{ if pendentes: }}
-  <center><h3>Atividades Pendentes</h3></center>
-    <table class="tabela">
-    <thead>
-      <tr>
-        <th>Status</th>
-        <th>Palestrante</th> 
-        <th>Título da Atividade</th>
-        <th>Arquivo</th>      
-        <th>Tipo da Atividade</th>      
-      </tr>
-    </thead>
-    <tbody>
-      {{ for pendente in pendentes: }}
-        <tr>
-          <td>
-            <a href="{{=URL('admin','status',args=[pendente.id])}}">Mudar Status</a>
-          </td>
-          <td>{{=pendente.id_usuario.first_name}}</td>
-          <td>{{=pendente.titulo}}</td>
-          <td><a href="{{=URL('default','download',args=[pendente.arquivo])}}">Arquivo da Apresentação</a></td>
-          <td>{{=pendente.tipo.tipo}}</td>
-          </tr>
-      {{ pass }}
-    </tbody>
-  </table>
-{{ pass }}
-<hr />
-
-
-{{ if aprovadas: }}
-  <center><h3>Atividades Aprovadas</h3></center>
-  <table class="tabela">
-    <thead>
-      <tr>
-        <th>Status</th>
-        <th>Palestrante</th> 
-        <th>Título da Atividade</th>
-        <th>Arquivo</th>      
-        <th>Tipo da Atividade</th>      
-      </tr>
-    </thead>
-    <tbody>
-      {{ for aprovada in aprovadas: }}
-        <tr>
-          <td>
-            <a href="{{=URL('admin','status',args=[aprovada.id])}}">Mudar Status</a>
-          </td>
-          <td>{{=aprovada.id_usuario.first_name}}</td>
-          <td>{{=aprovada.titulo}}</td>
-          <td><a href="{{=URL('default','download',args=[aprovada.arquivo])}}">Arquivo da Apresentação</a></td>
-          <td>{{=aprovada.tipo.tipo}}</td>
-          </tr>
-      {{ pass }}
-    </tbody>
-  </table>
-{{ pass }}
-
-
-
-{{ if rejeitadas: }}
-  <center><h3>Atividades Rejeitadas</h3></center>
-    <table class="tabela">
-    <thead>
-      <tr>
-        <th>Status</th>
-        <th>Palestrante</th> 
-        <th>Título da Atividade</th>
-        <th>Arquivo</th>      
-        <th>Tipo da Atividade</th>      
-      </tr>
-    </thead>
-    <tbody>
-      {{ for rejeitada in rejeitadas: }}
-        <tr>
-          <td>
-            <a href="{{=URL('admin','status',args=[rejeitada.id])}}">Mudar Status</a>
-          </td>
-          <td>{{=rejeitada.id_usuario.first_name}}</td>
-          <td>{{=rejeitada.titulo}}</td>
-          <td><a href="{{=URL('default','download',args=[rejeitada.arquivo])}}">Arquivo da Apresentação</a></td>
-          <td>{{=rejeitada.tipo.tipo}}</td>
-          </tr>
-      {{ pass }}
-    </tbody>
-  </table>
-{{ pass }}
 
