Aumentado o tamanho das textareas do sistema com a classe text

--- a/static/css/crud.css
+++ b/static/css/crud.css
@@ -18,6 +18,8 @@
     font-size: 120%;
 }
 
+.text {width: 65%;}
+
 .forms select {width: 40%;}
 
 .forms select[multiple="multiple"] {height: 80%;}
