--- a/views/layout.html
+++ b/views/layout.html
@@ -36,15 +36,9 @@
     <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
     <script src="{{=URL('static','js/modernizr-1.6.min.js')}}"></script>
     
-    {{#------  require CSS and JS files for this page (read info in base.css) ------}}
-    {{response.files.append(URL('static','css/base.css'))}}
-    {{response.files.append(URL('static','css/tabelas.css'))}}
-    {{response.files.append(URL('static','css/formularios.css'))}}    
-    {{response.files.append(URL('static','css/superfish.css'))}}
-    {{response.files.append(URL('static','fancybox/jquery.fancybox-1.3.1.css'))}}
-    {{response.files.append(URL('static','fancybox/jquery.mousewheel-3.0.2.pack.js'))}}
-    {{response.files.append(URL('static','fancybox/jquery.fancybox-1.3.1.js'))}}
-    {{response.files.append(URL('static','js/superfish.js'))}}
+    <!-- Incluindo arquivos estaticos (JS e CSS) criados para os modulos e layouts do sistema -->
+    {{include 'static.html'}}
+    
     {{#------ include web2py specific js code (jquery, calendar, form stuff) ------}}
     {{include 'web2py_ajax.html'}}
 
@@ -155,8 +149,9 @@
 	    <center>
 	      <a href="http://www.web2py.com/"><img src="{{=URL('static','images/poweredby.png')}}"  style="padding-bottom: 3px;"/></a>
 	      <br />	      
-	      <span><h5>Desenvolvidor pela <a href="http://flisoldf.blog.br/2011/?page_id=23">equipe do Flisol DF</a></h5></span>
-	      <span>{{=T('Copyleft')}} - 2011</span>
+	      <span><h5>Desenvolvido pela <a href="http://flisoldf.blog.br/2011/?page_id=23">equipe do Flisol DF</a></h5></span>
+        <span>{{=T('Copyleft')}} - 2011</span> | 
+        <span>Versão Beta</span>
 	    </center>
 	  <div style="clear: both;"></div><!-- Clear the divs -->
 	  {{end}}
