Inserido o plugin CLEditor para colocar uma barra de formatação nas textareas do sistema.

--- a/views/static.html
+++ b/views/static.html
@@ -16,3 +16,7 @@
 <!-- Plugin Data Tables -->
 {{response.files.append(URL('static','datatable/jquery.dataTables.min.js'))}}
 {{response.files.append(URL('static','datatable/jquery.dataTables.css'))}}
+
+<!-- CLEditor -->
+{{response.files.append(URL('static','CLEditor/jquery.cleditor.min.js'))}}
+{{response.files.append(URL('static','CLEditor/jquery.cleditor.css'))}}
