--- a/static/css/base.css
+++ b/static/css/base.css
@@ -121,7 +121,7 @@ body { font:13px/1.231 sans-serif; *font-size:small; } /* hack retained to prese
 
 select, input, textarea, button { font:99% sans-serif; }
 
-select, .reference, .list {font-size: 120%; height: 25px;}
+select, .reference, .list, .string {font-size: 120%; height: 25px;}
 
 
 /* normalize monospace sizing 
