Adicionado o campo Sala para associar uma sala a uma atividade.

--- a/views/atividades/detalhes.html
+++ b/views/atividades/detalhes.html
@@ -36,8 +36,9 @@
 
 <div class="campo">Status da Atividade: </div>
 <div class="dados">
-{{=form.custom.begin}}
+  {{=form.custom.begin}}
     {{=form.custom.widget.status}}<br />
+    {{=form.custom.widget.id_sala}}<br />
     {{=form.custom.submit}}
 {{=form.custom.end}}
 </div><br />
