--- a/views/locais/lista.html
+++ b/views/locais/lista.html
@@ -1,10 +1,17 @@
 {{ extend 'layout.html' }}
 
+<script type="text/javascript">
+  jQuery(document).ready(function(){
+    //DataTable
+    jQuery("#table_atividades").dataTable();
+  });
+</script>   
+
 {{ if salas: }}
     <center>
         <h2>Lista de Salas Cadastradas</h2>
     </center>
-    <table class="tabela">
+    <table class="display" id="table_atividades">
         <thead>
             <tr>
                 <th>Nome da Sala</th>
