--- a/views/admin/dashboard.html
+++ b/views/admin/dashboard.html
@@ -29,42 +29,59 @@
     <h2>Lista de Atividades Cadastradas</h2>
 </center>
 <table class="display" id="table_atividades">
-    <thead>
-        <tr>
-            <th>Nome da Atividade</th>
-            <th>Palestrante</th>
-            <th>Nível</th>
-            <th>Tipo da Atividade</th>
-            <th>Arquivo da Apresentação</th>
-            <th>Local da Atividade</th>
-            <th>Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{ for atividade in atividades: }}
-            <tr>
-                <td><a class="atividade" href="{{=URL('atividades','detalhes',args=[atividade.id])}}">{{=atividade.titulo}}</a></td>
-                <td>
-                    <a class="usuario" href="{{=URL('usuarios','detalhes',args=[atividade.id_usuario])}}">
-                        {{=atividade.id_usuario.first_name}}
-                    </a>
-                </td>
-                <td>{{=atividade.nivel[0]}}</td>
-                <td>{{=atividade.tipo.tipo}}</td>
-                {{ if atividade.arquivo: }}
-                    <td><a href="{{=URL('default','download',args=[atividade.arquivo])}}">Arquivo da Apresentação</a></td>
-                {{ else: }}
-                    <td>Nenhuma apresentação</td>
-                {{ pass }}
-                {{ if atividade.id_sala: }}
-                    <td>{{=atividade.id_sala.nome}}</td>
-                {{ else: }}
-                    <td>Sem local</td>
-                {{ pass }}
-                <td>{{=atividade.status}}</td>
-            </tr>
+  <thead>
+    <tr>
+      <th>Opções</th>
+      <th>Nome da Atividade</th>
+      <th>Palestrante</th>
+      <th>Nível</th>
+      <th>Tipo da Atividade</th>
+      <th>Arquivo da Apresentação</th>
+      <th>Local da Atividade</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{ for atividade in atividades: }}
+      <tr>
+        <td class="options">
+          <ul>
+            <li>
+              <a href="{{=URL('atividades','altera_sala',args=[atividade.id])}}">
+                <img src="" alt="Vincular Sala" title="Vincular Atividade a um Local"/>
+              </a>
+            </li>
+            <li>
+              <a href="{{=URL('atividades','status',args=[atividade.id])}}">
+                <img src="" alt="Alterar Status" title="Alterar o status da Atividade"/>
+              </a>
+            </li>
+          </ul>
+        </td>
+        <td>
+          <a class="atividade" href="{{=URL('atividades','detalhes',args=[atividade.id])}}">{{=atividade.titulo}}</a>
+        </td>
+        <td>
+          <a class="usuario" href="{{=URL('usuarios','detalhes',args=[atividade.id_usuario])}}">
+            {{=atividade.id_usuario.first_name}}
+          </a>
+        </td>
+        <td>{{=atividade.nivel[0]}}</td>
+        <td>{{=atividade.tipo.tipo}}</td>
+        {{ if atividade.arquivo: }}
+          <td><a href="{{=URL('default','download',args=[atividade.arquivo])}}">Arquivo da Apresentação</a></td>
+        {{ else: }}
+          <td>Nenhuma apresentação</td>
         {{ pass }}
-    </tbody>
+        {{ if atividade.id_sala: }}
+          <td>{{=atividade.id_sala.nome}}</td>
+        {{ else: }}
+          <td>Sem local</td>
+        {{ pass }}
+        <td>{{=atividade.status}}</td>
+      </tr>
+    {{ pass }}
+  </tbody>
 </table>
 
 
