Retirado o form custom para receber somente o formulario personalizado com o SQLFORM

--- a/views/atividades/detalhes.html
+++ b/views/atividades/detalhes.html
@@ -34,11 +34,6 @@
     <div class="dados"><p>Nenhum evento</p></div>
 {{ pass }}
 
-<div class="campo">Status da Atividade: </div>
 <div class="dados">
-  {{=form.custom.begin}}
-    {{=form.custom.widget.status}}<br />
-    {{=form.custom.widget.id_sala}}<br />
-    {{=form.custom.submit}}
-{{=form.custom.end}}
+  {{=form}}
 </div><br />
