--- a/views/organizacao/listar.html
+++ b/views/organizacao/listar.html
@@ -23,21 +23,28 @@
             <tr>
                 <td width="50px">{{=usuario.id}}</td>
                 <td width="150px">
-                    {{ if confirmacao.__contains__(usuario.id): }}
-                    <a href="{{=URL('organizacao','checkin',args=[usuario.id])}}">
-                        <img src="{{=URL('static','images/ok.png')}}" alt="Liberar Certificado" title="Liberar Certificado"/>
-                        Liberar Certificado
-                    </a>
+                    {{ if certificado.__contains__(usuario.id): }}
+                        <a href="{{=URL('organizacao','checkin',args=[usuario.id])}}">
+                            <img src="{{=URL('static','images/ok.png')}}" alt="Liberar Certificado" title="Liberar Certificado"/>
+                            Usuário Confirmado
+                        </a>
                     {{ else: }}
-                    <a href="{{=URL('organizacao','checkin',args=[usuario.id])}}">
-                        <img src="{{=URL('static','images/ok.png')}}" alt="Check-in do usuário" title="Check-in do usuário"/>
-                        Check-in
-                    </a>
+                        {{ if confirmacao.__contains__(usuario.id): }}
+                            <a href="{{=URL('organizacao','checkin',args=[usuario.id])}}">
+                                <img src="{{=URL('static','images/status.png')}}" alt="Liberar Certificado" title="Liberar Certificado"/>
+                                Liberar Certificado
+                            </a>
+                        {{ else: }}
+                            <a href="{{=URL('organizacao','checkin',args=[usuario.id])}}">
+                                <img src="{{=URL('static','images/warn.png')}}" alt="Check-in do usuário" title="Check-in do usuário"/>
+                                Check-in
+                            </a>
+                        {{ pass }}
                     {{ pass }}
                     <br />
                     <a href="{{=URL('organizacao', 'editar', args=[usuario.id])}}">
                         <img src="{{=URL('static','images/edit_entries.png')}}" alt="Editar usuário" title="Editar usuário"/>
-                        Editar
+                        Editar Usuário
                     </a>
                     
                 </td>
@@ -49,3 +56,12 @@
         {{ pass }}
     </tbody>
 </table>
+
+<div id="legenda_tabela">
+    <h4>Legenda</h4>
+    <ul>
+        <li class="um">Não realizou nenhum checkin</li>
+        <li class="dois">Primeiro checkin realizado</li>
+        <li class="tres">Realizado os dois checkins e certificado liberado para Download</li>
+    </ul>
+</div>
