--- a/views/organizacao/listar.html
+++ b/views/organizacao/listar.html
@@ -25,7 +25,7 @@
                 <td width="150px">
                     {{ if certificado.__contains__(usuario.id): }}
                         <a href="{{=URL('organizacao','checkin',args=[usuario.id])}}">
-                            <img src="{{=URL('static','images/ok.png')}}" alt="Liberar Certificado" title="Liberar Certificado"/>
+                            <img src="{{=URL('static','images/ok.png')}}" alt="Usuário Confirmado" title="Usuário Confirmado"/>
                             Usuário Confirmado
                         </a>
                     {{ else: }}
@@ -60,8 +60,8 @@
 <div id="legenda_tabela">
     <h4>Legenda</h4>
     <ul>
-        <li class="um">Não realizou nenhum checkin</li>
-        <li class="dois">Primeiro checkin realizado</li>
+        <li class="um">Não realizou nenhum checkin ou realizou há menos de 3 horas</li>
+        <li class="dois">Certificado pode ser liberado para download no próximo checkin</li>
         <li class="tres">Realizado os dois checkins e certificado liberado para Download</li>
     </ul>
 </div>
