Inserido novos seletores para renderizar a página HTML com o certificado

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -536,3 +536,16 @@ div#legenda_tabela ul li.tres {
     background-repeat: no-repeat;
     background-position: left;
 }
+
+div.certificado {
+    position: absolute
+}
+
+div.participante {
+    position: absolute;
+    top: 340px;
+    left: 150px;
+    width: 60%;
+    color: black;
+    text-align: center;
+}
